# OtterCode

./: .env.example  .gitignore  README-zh.md  README.md  pyproject.toml
.github/workflows/: test.yml
ottercode/: __init__.py  cli.py  config.py
ottercode/core/: __init__.py  compact.py  runtime.py  session.py
ottercode/tools/: __init__.py  background.py  bash.py  files.py  permissions.py  skills.py  tasks.py  todo.py
ottercode/worktree/: __init__.py  events.py  manager.py
tests/: test_cli.py  test_permissions.py  test_session.py  test_worktree.py
